# ChangeLog for sys-libs/cracklib
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/cracklib/ChangeLog,v 1.173 2012/10/22 01:02:27 zerochaos Exp $

  22 Oct 2012; Rick Farina <zerochaos@gentoo.org> cracklib-2.8.19.ebuild:
  catalyst stage1 build with python enabled breaks so we add a build use flag to
  prevent adding python support too early

  26 Aug 2012; Raúl Porcel <armin76@gentoo.org> cracklib-2.8.19.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #427132

  19 Aug 2012; Christoph Junghans <ottxor@gentoo.org> cracklib-2.8.19.ebuild:
  added prefix keywords

  04 Aug 2012; Agostino Sarubbo <ago@gentoo.org> cracklib-2.8.19.ebuild:
  Stable for amd64, wrt bug #427132

  24 Jul 2012; Jeroen Roovers <jer@gentoo.org> cracklib-2.8.19.ebuild:
  Stable for HPPA (bug #427132).

  24 Jul 2012; Anthony G. Basile <blueness@gentoo.org> cracklib-2.8.19.ebuild:
  Stable ppc64, bug #427132

  23 Jul 2012; Markus Meier <maekke@gentoo.org> cracklib-2.8.19.ebuild:
  arm stable, bug #427132

  22 Jul 2012; <nixnut@gentoo.org> cracklib-2.8.19.ebuild:
  ppc stable #427132

  21 Jul 2012; Jeff Horelick <jdhore@gentoo.org> cracklib-2.8.19.ebuild:
  marked x86 per bug 427132

  18 May 2012; Mike Frysinger <vapier@gentoo.org> cracklib-2.8.19.ebuild:
  Make zlib optional.

*cracklib-2.8.19 (18 May 2012)

  18 May 2012; Mike Frysinger <vapier@gentoo.org> +cracklib-2.8.19.ebuild:
  Version bump.

  22 Feb 2012; Patrick Lauer <patrick@gentoo.org> cracklib-2.8.16.ebuild,
  cracklib-2.8.18-r1.ebuild, cracklib-2.8.18.ebuild:
  Restricting jython

  20 Feb 2012; Torsten Veller <tove@gentoo.org> cracklib-2.8.18-r1.ebuild:
  Fix broken header

  20 Feb 2012; Patrick Lauer <patrick@gentoo.org> cracklib-2.8.16.ebuild,
  cracklib-2.8.18-r1.ebuild, cracklib-2.8.18.ebuild:
  Restricting pypy

  16 Feb 2012; Mike Frysinger <vapier@gentoo.org> cracklib-2.8.18-r1.ebuild,
  +files/cracklib-2.8.18-python-stat.patch: