@@ -10,23 +10,23 @@ DIST cracklib-2.8.19.tar.gz 611602 SHA256 7086b0ca23f875c9cd9ea2a993c262384b274d
 EBUILD cracklib-2.8.16.ebuild 2144 SHA256 44c66d27c402b21bb8073b70d7d33ffb8b83368516c9721cbb8e5cb95b0b79a1 SHA512 3d87c96b66a929dcf04036f8af8d094a64e16cee6e9e14433b504776f964ebaccfe8a53aaf025161fc9c34b6525381de2a3d067428d73668bc61daa13b3daebd WHIRLPOOL 43eb54a41a7067bc6ae746f1cc5e7e60312487d23930919cc0bb55c4bdb954bb8b7ce77a165606d6a2eb3bc4d0004fcc6f295676436f839be4af675e0ab12bc7
 EBUILD cracklib-2.8.18-r1.ebuild 2192 SHA256 8d579f9f0a9651b4d70162f422cb7e65d0041aa94515c48a9e4e199c502c0283 SHA512 640548c9d8f847a5cc2fba7beac29f19654648fe9433bf548cbf31e76f82a4be549efac06384ee293f398c69f886a08d03fcef1b1a7bd2c70e4f01f442b0f90b WHIRLPOOL 3e9261c2ead15e0cf75eec11b5e9043687810da16037bc139ec864c84003517fc02087c6e198f051976af8ee01c82cbbc8c3c5de801198b0e1ce51f760190519
 EBUILD cracklib-2.8.18.ebuild 2067 SHA256 b54871c715af6a5a52d588a3622203b2953b04baaa08fc5a5501f1eaf91a7828 SHA512 fe101a112f050b7f41b56ed5f9907918eeccb49a047b6d1218935e0d112bc2c9aa7249ff6c9f5b8d34f00a25c3b8eeea4789e2801b9cdfd5d7f450ad0ad248b7 WHIRLPOOL 2d2171e7c74bd441f3257b6eaffd1ef1764c12526a645bfbe9c781f523a259ec5cf8b2d7b2c7142c4f0e84d18dd6a7fab5268a2922ef2aea0cf6a58e97109264
-EBUILD cracklib-2.8.19.ebuild 2408 SHA256 bcddd30babe4bf82b36a475d9d21dc62b87d13163c55aba409d784d9956b3d50 SHA512 110674709eb3498cccc49657903ce125c2ffce28e9052b034610c0382819f8e8ff152827b2bb99dcef286bc38be4abc5bd55c02ef8131b78abdb8b34de8d4d61 WHIRLPOOL bba7e35ba466715b793f4bf87c39528bfd62e58569c3d68c55e064f0354dc54f83eae4212a7df4be03c9fb4d7cb43f95700317f1dd553fffd6fed8af0d7909b1
-MISC ChangeLog 22122 SHA256 08751a736d8aa962552e4db83d2c50f811091c6139dfa16ea8924e33dcf28229 SHA512 83254c5109e4a65a9526c57282dd56ac4a8c88f468cd41102db8cfe558bb5809906309c14b1e2fb309bf048c0ea677ccd8a37e78cc61dfed88a56a9988fc69ed WHIRLPOOL b9d95ac8f745c1c61b0b91bdaf862d21594a10227aa338b8e3e69d7c7f7d7c7bcd27ff7e6cab55b4584842e0f2888fd1f3b7509aac0aaa0a71c1585b6172122e
+EBUILD cracklib-2.8.19.ebuild 2434 SHA256 aa051b946d6bb9abfbd35ae5da1d388bb49249dd58ae7c18b59c30f29db97be4 SHA512 5eb9d0a5a0096e2593dc8b21cb06d5896593420ac28100fb62ab8feba87206ed2359468a909199689d990232a365cc7ec72a80284de2b84c398165c9f92e7325 WHIRLPOOL 37c803301f9423f327b5fd9d6a37835dcdf3aa2a4f104f0a213901b8820430ef6bfa7887673ec1b48ff0f4f7269601af1480fed675414381904376ff3de8b368
+MISC ChangeLog 22274 SHA256 7caa0fa73d49547c0f643542f1bcf842f76ff00e5f19dfc8868850d811796fdc SHA512 28f347a1ac79b81095ac6d04800f69e909efe1bae310961f24f6ed4f358832db76b58c9b58fa91126ecdebe3773c47e8ead7a4cf7fb094138fbd71c5e7d82d26 WHIRLPOOL 95746d881fc4627c6a00e47be5c10b536d90b1f38c099a1c6649e89e09a1f408935068289ac043de51dab234cf0755d889bd8aa636836c4dfa747bf59a173c44
 MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIbBAEBCgAGBQJQhJuUAAoJEKXdFCfdEflKbxUP+Iozm9WHdR7xlZXYR16LA6TG
-uPOn/r1NgMQEJco1lCGnCK7tuf4efiHxoIyLr4QsIfsh4Rh8HPyi1UJBtnga8vcA
-V3K0SsvvCjeCWg7i/9CL1oAnIWSCeoz/z8lbmnCvKz6RZjE4ZAbBmZ2iehmXIzYK
-07TdYbLdcDtlkz+GpFDjl0YeO2r3+KZtW/6V04Nrr7ucFIQkbHc1x7uywod/3ZvG
-5Eakn0RvEgJjzJrVfm2L8bFMtPwxpupYx7Y+4K6z/s+glWqaNCJ7ldMAYSV2filF
-LRYZKXJxa3kbYhkBDM9LBVOab/Kzia44Fvo3l/ZB1iA7mQJf3SwjEkuRhn8NQGPp
-uNNsBBv7nIC9RWwmBsunE9OfhIoqzN+I/cpOL4QdTFXvbr5DF9pPkcXtIR3pS5VJ
-HG+72s4HZcbIDZW8e8ok/VCWfQnMn2L/4ghSnZazgTDz0Z+AXIso8odo8d/smnDC
-XXZqYELTPJAdCLrHSBX0oGLbDsFwnDHvqgWYuhYkFtQ79GZKdUHg3Sk0+uDTBlwX
-OFfrnNvYVerFJPquzB0u3AgeozGvnULNi9evEtNMugzWBqamcAuRMQpuOLkADRRg
-XHHn4syCYHiKo9RB/AiTuvppvM1nUcn+s++eGWvj3SKrgCyrqnJRHvsMzggbPXHj
-32QAercPwbnRIoKmJJg=
-=e9uZ
+iQIcBAEBCgAGBQJQkY9yAAoJEKXdFCfdEflKtEIP/24eKTQSz3vOLYtynp8K4e2Q
+/3uKIAULSscN9ifnj6qxa27j4VsoP6H6hQP9ACmtVg6PFB98D/IXfS/+WN+MhlsP
+md4m4jSgN2miQgtRs91J+o0GP05GCwr4nCttZnB4aIqc+UVE0k4nOvXIfNCZboMS
+Y6tj2oc8BPTxbXbxHtocmVenXMuKppaxCzhhVNODZUvDUvnFockB3Iqy3q2O3IVe
+F6Kwo4JUPyKUXL1kxBYpvYDD3xp4Zt3R7sJ1HAS1DTiXLVqPQ3zCP60vuPsOCkxX
+h5Ae73oJfT+4xlFg5amkiPzKT3OY1T1jozhGniBQ1P6NubIpLk90m2CzK7OJt7fi
+XTKLtGav/XJhuq415erYJ4J8Bn7fPrZXwCkUKwQ0xKRR8Y6eA/+p/35C4qc2dCsq
+jF2ii0955MERl9grYFOT7VZjIyFwhbrYu5JeUTF95u+Idot4eH7HBfKK27WJxmyP
++/FQpDTEbLkAaFV4aYIQrMQz4FBt/BgGDsN+G8mSV7P/QxGfPtyPC/CsvBvIWukw
+RLTb5wBv0xpZuREHgcL8Uw/GvnkxWCJC7Em4iVwt6cW1T8omSjxr+RYF0xl2wDRM
+vz8m+9UKie476g2bjLOaxunetfx0PPMGCh9whXWEqoURNn4gGA8bDVYpdoFENzF4
+rrpTDv1n0oQhvTRsEGx4
+=fDp+
 -----END PGP SIGNATURE-----
